--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -10,8 +10,8 @@ RUN pip3 install mysql-connector-python
 RUN pip3 install --upgrade oauth2client
 RUN pip3 install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
 RUN cd /opt; \
-ENV userDB=
-ENV passDB=
+ENV userDB=''
+ENV passDB=''
     git clone https://github.com/ismaeldarosa19/challenge.git 
 WORKDIR /opt/challenge
 ADD token.json /opt/challenge
