--- a/dockerfile.mysql
+++ b/dockerfile.mysql
@@ -1,7 +1,7 @@
 FROM mysql:latest AS mysql
-ENV MYSQL_ROOT_PASSWORD Qazxsw21!!
-ENV MYSQL_DATABASE challenge
-ENV MYSQL_USER userChallenge
-ENV MYSQL_PASSWORD Qazxsw21!!
+ENV MYSQL_ROOT_PASSWORD '' 
+ENV MYSQL_DATABASE ''
+ENV MYSQL_USER ''
+ENV MYSQL_PASSWORD ''
 ADD database.sql /docker-entrypoint-initdb.d
 expose 3306
