--- a/database/dockerfile.mysql
+++ b/database/dockerfile.mysql
@@ -3,5 +3,5 @@ ENV MYSQL_ROOT_PASSWORD ''
 ENV MYSQL_DATABASE ''
 ENV MYSQL_USER ''
 ENV MYSQL_PASSWORD ''
-ADD database.sql /docker-entrypoint-initdb.d
+ADD database/database.sql /docker-entrypoint-initdb.d
 expose 3306
