--- a/dev/dockerfile.dev
+++ b/dev/dockerfile.dev
@@ -9,8 +9,7 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 RUN pip3 install mysql-connector-python
 RUN pip3 install --upgrade oauth2client
 RUN pip3 install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-RUN cd /opt; \
-    git clone https://github.com/ismaeldarosa19/challenge.git 
+ADD dev/challengeGmail.py /opt/challenge
 WORKDIR /opt/challenge
 ADD credentials/token.json /opt/challenge
 ADD credentials/credentials.json /opt/challenge
