--- a/dev/dockerfile.dev
+++ b/dev/dockerfile.dev
@@ -1,12 +1,8 @@
 FROM ubuntu:latest
-RUN apt-get update && apt-get upgrade -y
-RUN apt -y install apt-utils
-RUN apt-get install python3 -y
-RUN apt-get install git -y
-RUN apt-get install python3-pip -y
+RUN apt-get update && apt-get install -y python3-pip
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-RUN pip3 install mysql-connector-python
-RUN pip3 install --upgrade oauth2client
+RUN pip3 install mysql-connector-python 
+RUN pip3 install --upgrade oauth2client 
 RUN pip3 install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
 WORKDIR /opt/challenge
 ADD dev/challengeGmail.py /opt/challenge
