--- a/dev/dockerfile.dev
+++ b/dev/dockerfile.dev
@@ -4,7 +4,9 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 RUN pip3 install mysql-connector-python 
 RUN pip3 install --upgrade oauth2client 
 RUN pip3 install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+RUN pip3 install tabulate
 WORKDIR /opt/challenge
 ADD dev/challengeGmail.py /opt/challenge
+ADD dev/challengeGmailQ.py /opt/challenge
 ADD credentials/token.json /opt/challenge
 
